@@ -1,3 +1,4 @@
+    ADDED: option: Panel > Operation > Unslect files before copy/move
     ADDED: support for xz archives
 
     FIXED: View displays wrong total size in some circumstances.
